--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,23 @@
 /*  your css code here. If applicable */
+body{
+	background-color: gray;
+	
+}
+h1{
+	text-align:center;
+}
+h2{
+	text-align:center;
+}
+.playlist{
+	background-color:white;
+	border: 1px solid black;
+	border-radius: 5px;
+}
+ul{
+	list-style-type: none;
+}
+a{
+	text-decoration-line: none;
+}
+.playing
